remove fixed aspect ration mixin not supported on mobile
tested on iphone7+

--- a/src/DataViz/BlockCount.scss
+++ b/src/DataViz/BlockCount.scss
@@ -20,7 +20,9 @@
 
 .reponsive-ratio{
   margin-top: 10px;
-@include aspect-ratio(3,1);
+// @include aspect-ratio(3,1);
+width: 100%;
+height: 300px;
 position: relative;
 }
 .block-count-chart {
@@ -37,9 +39,9 @@ position: relative;
 }
 
 .blockcount {
-    // -webkit-mask: url(/images/person.svg) no-repeat 50% 50%;
-    // mask: url(/images/person.svg) no-repeat 50% 50%;
-    // -webkit-mask-size: contain;
+    -webkit-mask: url(/images/person.svg) no-repeat 50% 50%;
+    mask: url(/images/person.svg) no-repeat 50% 50%;
+    -webkit-mask-size: contain;
     // mask-size: contain;
     // float: left;
     // height: 4.3%;
